--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.22.1",
   "description": "A bpmn 2.0 toolkit and web modeler",
   "scripts": {
-    "all": "grunt",
+    "all": "run-s lint test distro",
     "dev": "grunt auto-test",
-    "distro": "grunt build",
+    "distro": "NODE_ENV=production webpack",
     "test": "grunt test",
     "lint": "grunt lint"
   },
@@ -34,6 +34,11 @@
   ],
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-preset-env": "^1.6.1",
     "browserify": "^13.0.0",
     "browserify-derequire": "^0.9.1",
     "bundle-collapser": "^1.1.1",
@@ -60,8 +65,10 @@
     "karma-sinon-chai": "^1.3.2",
     "karma-spec-reporter": "0.0.31",
     "load-grunt-tasks": "^0.3.0",
+    "lodash-webpack-plugin": "^0.11.4",
     "mocha": "^4.0.1",
     "mocha-test-container-support": "0.2.0",
+    "npm-run-all": "^4.1.1",
     "phantomjs-prebuilt": "^2.1.12",
     "puppeteer": "^0.12.0",
     "sinon": "^4.0.1",
@@ -70,7 +77,9 @@
     "stringify": "^3.1.0",
     "time-grunt": "^0.3.2",
     "uglify-js": "^2.4.16",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "webpack": "^3.8.1",
+    "webpack-babel-external-helpers-2": "^3.0.2"
   },
   "dependencies": {
     "bpmn-moddle": "^0.14.0",
