--- a/package.json
+++ b/package.json
@@ -84,8 +84,8 @@
     "webpack-babel-external-helpers-2": "^3.0.2"
   },
   "dependencies": {
-    "bpmn-moddle": "^0.14.0",
-    "diagram-js": "^0.21.1",
+    "bpmn-moddle": "github:bpmn-io/bpmn-moddle#ES2015",
+    "diagram-js": "github:bpmn-io/diagram-js#ES2015",
     "diagram-js-direct-editing": "^0.19.0",
     "diagram-js-origin": "^0.15.2",
     "ids": "^0.2.0",
