chore(project): remove lodash from lib

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,10 @@
   },
   "extends": "eslint:recommended",
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
   "plugins": [
     "mocha"
