--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["env"],
   "plugins": [
-    "transform-object-assign"
+    "transform-object-assign",
+    "transform-object-rest-spread"
   ]
 }
