chore(project): insert test diagrams via BRFS
This prepares the tests for upcoming import conversion:

* use brfs instead of stringify to be able to do local requires
* use import { bootstrapModeler, ... } instead of global test helper
* use project relative path for TestHelper, test fixtures and
  lib includes in tests

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babelify": "^7.3.0",
+    "brfs-babel": "^1.0.0",
     "browserify": "^13.0.0",
     "browserify-derequire": "^0.9.1",
     "bundle-collapser": "^1.1.1",
@@ -77,7 +78,6 @@
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0",
     "source-map-concat": "^1.0.0",
-    "stringify": "^3.1.0",
     "time-grunt": "^0.3.2",
     "uglify-js": "^2.4.16",
     "watchify": "^3.7.0",
